@@ -26,21 +26,23 @@ import java.io.IOException;
 import java.lang.reflect.Constructor;
 
 public class CeldaController implements Initializable {
-    private static final Logger log = LogManager.getLogger();
+    private static final Logger log = LogManager.getLogger(CeldaController.class);
     private static Parent nodo;
     private boolean isListenerActive = true;
     private DatosJuego dato;
-    Celda celda;
+    private Celda celda;
+
     @FXML
     private VBox estudiantesVBox;
     @FXML
     private VBox recursosVBox;
     @FXML
-    Label alertaCeldaLabel = new Label();
+    private Label alertaCeldaLabel = new Label();
     @FXML
     private ChoiceBox<String> estudiantesAddBox = new ChoiceBox<>();
     @FXML
     private ChoiceBox<String> recursosAddBox = new ChoiceBox<>();
+
     private final String[] tiposEstudiantes = {"+ Básico", "+ Normal", "+ Avanzado"};
     private final String[] tiposRecursos = {"+ Agua", "+ Comida", "+ Montaña", "+ Tesoro", "+ Biblioteca", "+ Pozo"};
 
@@ -52,9 +54,9 @@ public class CeldaController implements Initializable {
         FXMLLoader loader = new FXMLLoader(getClass().getResource("Celda.fxml"));
         loader.setController(this);
         Parent root = loader.load();
-        estudiantesVBox = (VBox)((GridPane) ((VBox) root).getChildren().getFirst()).getChildren().get(1);
-        recursosVBox = (VBox)((GridPane) ((VBox) root).getChildren().getFirst()).getChildren().get(3);
-        this.nodo = root;
+        estudiantesVBox = (VBox) ((GridPane) ((VBox) root).getChildren().get(0)).getChildren().get(1);
+        recursosVBox = (VBox) ((GridPane) ((VBox) root).getChildren().get(0)).getChildren().get(3);
+        CeldaController.nodo = root;
         if (!celda.getListaEstudiantes().isVacia()) {
             for (int i = 0; i != celda.getListaEstudiantes().getNumeroElementos(); i++) {
                 addEstudiantePrinc(celda.getListaEstudiantes().getElemento(i).getData().getTipo(), false, celda.getListaEstudiantes().getElemento(i).getData());
@@ -66,22 +68,23 @@ public class CeldaController implements Initializable {
             }
         }
     }
+
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
         try {
-            alertaCeldaLabel.setText(STR."Celda \{celda.getPosicionN()}, \{celda.getPosicionM()}");
+            alertaCeldaLabel.setText(String.format("Celda %d, %d", celda.getPosicionN(), celda.getPosicionM()));
             estudiantesAddBox.getItems().setAll(tiposEstudiantes);
             recursosAddBox.getItems().setAll(tiposRecursos);
             estudiantesAddBox.setStyle("-fx-font-family: 'Bookman Old Style'; -fx-font-size: 12px;");
             recursosAddBox.setStyle("-fx-font-family: 'Bookman Old Style'; -fx-font-size: 12px;");
             estudiantesAddBox.setValue("Estudiante");
             recursosAddBox.setValue("Recurso");
-            estudiantesAddBox.valueProperty().addListener((_, _, newValue) -> {
+            estudiantesAddBox.valueProperty().addListener((observable, oldValue, newValue) -> {
                 if (isListenerActive) {
                     this.addEstudiante(newValue);
                 }
             });
-            recursosAddBox.valueProperty().addListener((_, _, newValue) -> {
+            recursosAddBox.valueProperty().addListener((observable, oldValue, newValue) -> {
                 if (isListenerActive) {
                     this.addRecurso(newValue);
                 }
@@ -91,7 +94,7 @@ public class CeldaController implements Initializable {
         }
     }
 
-    public void addEstudiante (String tipoEstudiante) {
+    public void addEstudiante(String tipoEstudiante) {
         switch (tipoEstudiante) {
             case "+ Básico":
                 addEstudiante(EstudianteBasico.class);
@@ -113,7 +116,7 @@ public class CeldaController implements Initializable {
             if (celda.getListaEstudiantes().getNumeroElementos() >= 3) {
                 alertaCeldaLabel.setText("¡Ya hay 3 estudiantes en la celda!");
                 PauseTransition pausa = new PauseTransition(Duration.millis(2500));
-                pausa.setOnFinished(_ -> alertaCeldaLabel.setText("Celda " + celda.getPosicionN() + ", " + celda.getPosicionM()));
+                pausa.setOnFinished(event -> alertaCeldaLabel.setText(String.format("Celda %d, %d", celda.getPosicionN(), celda.getPosicionM())));
                 pausa.play();
                 log.debug("Se ha intentado establecer un estudiante cuando ya habían 3 en la celda");
             } else {
@@ -135,7 +138,7 @@ public class CeldaController implements Initializable {
         try {
             T estudiante;
             if (nuevoEstudiante) {
-                Constructor<?> constructor = claseEstudiante.getConstructor(int.class, int.class, int.class, float.class, float.class);
+                Constructor<?> constructor = claseEstudiante.getConstructor(int.class, int.class, int.class, double.class, double.class);
                 int id;
                 if (dato.getHistorialEstudiantes().isVacia()) {
                     id = 1;
@@ -148,14 +151,14 @@ public class CeldaController implements Initializable {
                 estudiante = (T) estudianteAñadir;
             }
             HBox estudianteCelda = FXMLLoader.load(getClass().getResource("ElementoCelda.fxml"));
-            Label estudianteLabel = (Label) estudianteCelda.getChildren().getFirst();
-            Font font = new Font("Bookman Old Style",12);
+            Label estudianteLabel = (Label) estudianteCelda.getChildren().get(0);
+            Font font = new Font("Bookman Old Style", 12);
             estudianteLabel.setFont(font);
-            String tipoEstudiante = claseEstudiante.getSimpleName().replace("Estudiante","");
+            String tipoEstudiante = claseEstudiante.getSimpleName().replace("Estudiante", "");
             estudianteLabel.textProperty().bind(estudiante.getTiempoDeVidaProperty().asString(
                     tipoEstudiante + ": Vida: %d Id: " + estudiante.getId() + " Gen: " + estudiante.getGeneracion()));
 
-            Button botonQuitar = (Button) ((AnchorPane) estudianteCelda.getChildren().get(1)).getChildren().getFirst();
+            Button botonQuitar = (Button) ((AnchorPane) estudianteCelda.getChildren().get(1)).getChildren().get(0);
 
             botonQuitar.setOnAction(this::delEstudiante);
 
@@ -169,7 +172,7 @@ public class CeldaController implements Initializable {
         int i = 0;
         boolean eliminado = false;
         while (i != dato.getEstudiantes().getNumeroElementos() && !eliminado) {
-            String labelEstudianteText = ((Label) ((HBox) ((Button) event.getSource()).getParent().getParent()).getChildren().getFirst()).getText();
+            String labelEstudianteText = ((Label) ((HBox) ((Button) event.getSource()).getParent().getParent()).getChildren().get(0)).getText();
             int indexOfIdLabel = labelEstudianteText.indexOf("Id:") + 4;
             int idLabel = (int) labelEstudianteText.charAt(indexOfIdLabel) - '0';
             int idEstudiante = dato.getEstudiantes().getElemento(i).getData().getId();
@@ -182,13 +185,13 @@ public class CeldaController implements Initializable {
         }
     }
 
-    public void addRecurso (String tipoRecurso) {
+    public void addRecurso(String tipoRecurso) {
         try {
             isListenerActive = false;
             if (celda.getListaRecursos().getNumeroElementos() >= 3) {
                 alertaCeldaLabel.setText("¡Ya hay 3 recursos!");
                 PauseTransition pausa = new PauseTransition(Duration.millis(2500));
-                pausa.setOnFinished(_ -> alertaCeldaLabel.setText("Celda " + celda.getPosicionN() + ", " + celda.getPosicionM()));
+                pausa.setOnFinished(event -> alertaCeldaLabel.setText(String.format("Celda %d, %d", celda.getPosicionN(), celda.getPosicionM())));
                 pausa.play();
                 log.debug("Se ha intentado crear un recurso cuando ya habían 3 en la celda");
             } else {
@@ -212,14 +215,14 @@ public class CeldaController implements Initializable {
                         addRecursoPrinc(Pozo.class, true, null);
                         break;
                     default:
-                        log.error("Excepcion no esperada al añadir el estudiante");
+                        log.error("Excepción no esperada al añadir el recurso");
                 }
             }
             recursosAddBox.setValue("Recurso");
             recursosAddBox.getSelectionModel().clearSelection();
             isListenerActive = true;
         } catch (Exception e) {
-            log.warn("Excepcion no esperada al añadir el recurso");
+            log.warn("Excepción no esperada al añadir el recurso");
         }
     }
 
@@ -235,18 +238,17 @@ public class CeldaController implements Initializable {
                     id = dato.getHistorialRecursos().getUltimo().getData().getId() + 1;
                 }
                 recurso = (T) constructor.newInstance(id, dato);
-
                 celda.agregarRecurso(recurso, true);
             } else {
                 recurso = recursoAñadir;
             }
             HBox cajaRecurso = FXMLLoader.load(getClass().getResource("ElementoCelda.fxml"));
-            Label labelRecurso = (Label) cajaRecurso.getChildren().getFirst();
-            Font font = new Font("Bookman Old Style",12);
+            Label labelRecurso = (Label) cajaRecurso.getChildren().get(0);
+            Font font = new Font("Bookman Old Style", 12);
             labelRecurso.setFont(font);
             String tipoRecurso = Character.toUpperCase(claseRecurso.getSimpleName().charAt(0)) + claseRecurso.getSimpleName().substring(1);
-            labelRecurso.textProperty().bind(recurso.getTurnosRestantesProperty().asString(STR."\{tipoRecurso}: Vida: %d Id: \{recurso.getId()}"));
-            Button botonQuitar = (Button) ((AnchorPane) cajaRecurso.getChildren().get(1)).getChildren().getFirst();
+            labelRecurso.textProperty().bind(recurso.getTurnosRestantesProperty().asString(String.format("%s: Vida: %%d Id: %d", tipoRecurso, recurso.getId())));
+            Button botonQuitar = (Button) ((AnchorPane) cajaRecurso.getChildren().get(1)).getChildren().get(0);
             botonQuitar.setOnAction(this::delRecurso);
             recursosVBox.getChildren().add(cajaRecurso);
         } catch (Exception e) {
@@ -255,7 +257,7 @@ public class CeldaController implements Initializable {
     }
 
     public void delRecurso(ActionEvent event) {
-        String labelRecursoText = ((Label) ((HBox) ((Button) event.getSource()).getParent().getParent()).getChildren().getFirst()).getText();
+        String labelRecursoText = ((Label) ((HBox) ((Button) event.getSource()).getParent().getParent()).getChildren().get(0)).getText();
         int indexOfId = labelRecursoText.indexOf("Id:") + 4;
         int id = labelRecursoText.charAt(indexOfId) - '0';
         int i = 0;
